fix: safari ABDI logo alignment fix

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -100,7 +100,6 @@ button {
 }
 
 img {
-  width: 100%;
   max-width: 100%;
   vertical-align: middle;
 }
